--- a/index.html
+++ b/index.html
@@ -25,7 +25,63 @@
         <!-- Banner section end here -->
     </header>
     <main>
-        
+        <!-- Development section start here -->
+         <section class="developer-container">
+            <div class="developer-content">
+                <h2 class="tile">
+                    Why Web Development??
+                </h2>
+                <p class="description">
+                    The primary goal in the development of the Web was to fulfill the automated information-sharing needs of academics affiliated with institutions.
+                </p>
+            </div>
+            <div class="development-box">
+                <div class="left-box">
+                    <div class="box-content">
+                        <h1 class="box-title">
+                            I will Do Coding and Change The
+                             World
+                        </h1>
+                        <p class="box-description">
+                            Web 2.0, a term popularised by Dale president of O'Reilly, during  2004 conference.
+                        </p>
+                        <button class="learn-btn">Learn More</button>
+                    </div>
+                    <div class="bix-image">
+                        <img src="assets/Layer_1.png" alt="">
+                    </div>
+                </div>
+                <div class="right-box">
+                    <div class="bix-image">
+                        <img src="assets/Group 4.png" alt="">
+                    </div>
+                    <div class="box-content-2">
+                        <h1 class="box-title">
+                            I will help People by creating Modern Web System
+                        </h1>
+                        <p class="box-description">
+                            In the realm of Web 2.0 environments, users now have access to a platform that encourages sharing activities such.
+                        </p>
+                        <button class="learn-btn">Learn More</button>
+                    </div>
+                </div>
+                <div class="left-box">
+                    <div class="box-content">
+                        <h1 class="box-title">
+                            I will Do Coding With my Creative Idea
+                        </h1>
+                        <p class="box-description">
+                            The journey of web development technologies began with simple HTML pages in the early days of the internet.
+                        </p>
+                        <button class="learn-btn">Learn More</button>
+                    </div>
+                    <div class="bix-image">
+                        <img src="assets/Layer_1.png" alt="">
+                    </div>
+                </div>
+            </div>
+         </section>
+         <!-- Development section end here -->
     </main>
     <footer>
 
