Finished the Current Target section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                  World
                             </h1>
                             <p class="box-description">
-                                Web 2.0, a term popularised by Dale president of O'Reilly, during  2004 conference.
+                                Web 2.0, a term popular by Dale president of O'Reilly, during  2004 conference.
                             </p>
                             <button class="learn-btn">Learn More</button>
                         </div>
@@ -87,11 +87,11 @@
 
          <!-- My Inspiration start here -->
           <section class="inspiration-container">
-            <div class="inspiration-content">
-                <p class="inspiration-title">
+            <div class="basic-content">
+                <p class="basic-title">
                     My Inspiration
                 </p>
-                <p class="inspiration-description">
+                <p class="basic-description">
                     The primary goal in the development of the Web was to fulfill the automated information-sharing needs of academics affiliated with institutions.
                 </p>
             </div>
@@ -100,6 +100,42 @@
             </div>
           </section>
          <!-- My Inspiration end here -->
+
+          <!-- Target start here -->
+           <section class="target-container">
+            <div class="current-target">
+                <div class="basic-content">
+                    <p class="basic-title">
+                        My Current Target
+                    </p>
+                    <p class="basic-description">
+                        The primary goal in the development of the Web was to fulfill the automated information-sharing needs of academics affiliated with institutions.
+                    </p>
+                </div>
+                <div class="current-box">
+                    <div class="box1">
+                        <img src="assets/html.png" alt="">
+                        <h1 class="target-title">HTML</h1>
+                        <p class="target-des">HTML is the standard markup language for creating Web pages</p>
+                        <button class="target-btn">Learn More</button>
+                    </div>
+                    <div class="box2">
+                        <img src="assets/css.png" alt="">
+                        <h1 class="target-title">CSS</h1>
+                        <p class="target-des">CSS is the language we use to style a Web page and more.</p>
+                        <button class="target-btn">Learn More</button>
+                    </div>
+                    <div class="box3">
+                        <img src="assets/js.png" alt="">
+                        <h1 class="target-title">JavaScript</h1>
+                        <p class="target-des">JavaScript is a scripting language that enables you to create.</p>
+                        <button class="target-btn">Learn More</button>
+                    </div>
+                </div>
+            </div>
+           </section>
+          <!-- Target end here -->
+
     </main>
     <footer>
 
