Finished the Support section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,19 @@
            </section>
           <!-- Target end here -->
 
+          <!-- Support start here -->
+           <section class="support-container">
+                <div class="support-title">I need Support</div>
+                <div class="support-description">The primary goal in the development of the Web was to fulfill</div>
+                <div class="search-table">
+                    <form action="">
+                        <input class="search" type="text" name="" id="" placeholder="Suggest me any feedback for me">
+                        <input class="submit-btn" type="submit" value="Submit">
+                    </form>
+                </div>
+           </section>
+          <!-- Support end here -->
+
     </main>
     <footer>
 
