--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <header>
+        <!-- Navabar start here -->
+        <nav>
+            <h1>Shahadat Hossain</h1>
+            <button class="resume-btn">Download Resume</button>
+        </nav>
+        <!-- Navabar start here -->
+
        <!-- Banner section start here -->
         <section class="banner-container">
             <div class="banner-content">
@@ -19,7 +26,7 @@
                 <p class="banner-description">
                     Web development is the work involved in developing a website for the Internet (World Wide Web) or an intranet (a private network).
                 </p>
-                <button class="contact-btn">Contact with me</button>
+                <a href="#footer"><button class="contact-btn">Contact with me</button></a>
             </div>
         </section>
         <!-- Banner section end here -->
@@ -150,8 +157,17 @@
           <!-- Support end here -->
 
     </main>
-    <footer>
-
+    <footer id="footer">
+        <!-- Footer start here -->
+        <div class="footer-content">
+            <h1 class="footer-title">An Open Commitment by Shahadat Hossain</h1>
+            <ul class="icon">
+                <li><a href="https://www.facebook.com/shahadathossen513"></a><img src="assets/facebook.png" alt=""></li>
+                <li><a href="https://github.com/shahadat513"></a><img src="assets/github.png" alt=""></li>
+                <li><a href="https://github.com/shahadat513"></a><img src="assets/linkedin-icon 1.png" alt=""></li>
+            </ul>
+        </div>
+        <!-- Footer end here -->
     </footer>
 </body>
 </html>
