Complete Full Project

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                             </p>
                             <button class="learn-btn">Learn More</button>
                         </div>
-                        <div class="bix-image">
+                        <div class="box-image">
                             <img src="assets/Layer_1.png" alt="">
                         </div>
                     </div>
                     <div class="right-box">
-                        <div class="bix-image">
+                        <div class="box-image-2">
                             <img src="assets/Group 4.png" alt="">
                         </div>
                         <div class="box-content-2">
@@ -83,7 +83,7 @@
                             </p>
                             <button class="learn-btn">Learn More</button>
                         </div>
-                        <div class="bix-image">
+                        <div class="box-image">
                             <img src="assets/Layer_1.png" alt="">
                         </div>
                     </div>
