after resolve some bugs

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/html.png">
 </head>
 <body>
     <header>
         <!-- Navabar start here -->
         <nav>
-            <h1>Shahadat Hossain</h1>
-            <button class="resume-btn">Download Resume</button>
+            <h1>Shahadat Shohel</h1>
+            <a href="https://drive.google.com/file/d/1FX-7vqKrZqvRoAlqj_oWa3rYBXuzaGv1/view?usp=drive_link" target="_blank"><button class="resume-btn">Download Resume</button></a>
         </nav>
         <!-- Navabar start here -->
 
@@ -53,7 +54,7 @@
                             <p class="box-description">
                                 Web 2.0, a term popular by Dale president of O'Reilly, during  2004 conference.
                             </p>
-                            <button class="learn-btn">Learn More</button>
+                            <a href="https://en.wikipedia.org/wiki/HTML" target="_blank"><button class="learn-btn">Learn More</button></a>
                         </div>
                         <div class="box-image">
                             <img src="assets/Layer_1.png" alt="">
@@ -70,7 +71,7 @@
                             <p class="box-description">
                                 In the realm of Web 2.0 environments, users now have access to a platform that encourages sharing activities such.
                             </p>
-                            <button class="learn-btn">Learn More</button>
+                            <a href="https://en.wikipedia.org/wiki/CSS" target="_blank"><button class="learn-btn">Learn More</button></a>
                         </div>
                     </div>
                     <div class="left-box">
@@ -81,7 +82,7 @@
                             <p class="box-description">
                                 The journey of web development technologies began with simple HTML pages in the early days of the internet.
                             </p>
-                            <button class="learn-btn">Learn More</button>
+                            <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"><button class="learn-btn">Learn More</button></a>
                         </div>
                         <div class="box-image">
                             <img src="assets/Layer_1.png" alt="">
@@ -124,19 +125,19 @@
                         <img src="assets/html.png" alt="">
                         <h1 class="target-title">HTML</h1>
                         <p class="target-des">HTML is the standard markup language for creating Web pages</p>
-                        <button class="target-btn">Learn More</button>
+                        <a href="https://en.wikipedia.org/wiki/HTML" target="_blank"><button class="target-btn">Learn More</button></a>
                     </div>
                     <div class="box2">
                         <img src="assets/css.png" alt="">
                         <h1 class="target-title">CSS</h1>
                         <p class="target-des">CSS is the language we use to style a Web page and more.</p>
-                        <button class="target-btn">Learn More</button>
+                       <a href="https://en.wikipedia.org/wiki/CSS" target="_blank"> <button class="target-btn">Learn More</button></a>
                     </div>
                     <div class="box3">
                         <img src="assets/js.png" alt="">
                         <h1 class="target-title">JavaScript</h1>
                         <p class="target-des">JavaScript is a scripting language that enables you to create.</p>
-                        <button class="target-btn">Learn More</button>
+                        <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"><button class="target-btn">Learn More</button></a>
                     </div>
                 </div>
             </div>
@@ -160,11 +161,11 @@
     <footer id="footer">
         <!-- Footer start here -->
         <div class="footer-content">
-            <h1 class="footer-title">An Open Commitment by Shahadat Hossain</h1>
+            <h1 class="footer-title">An Open Commitment by Shahadat Shohel</h1>
             <ul class="icon">
-                <li><a href="https://www.facebook.com/shahadathossen513"></a><img src="assets/facebook.png" alt=""></li>
-                <li><a href="https://github.com/shahadat513"></a><img src="assets/github.png" alt=""></li>
-                <li><a href="https://github.com/shahadat513"></a><img src="assets/linkedin-icon 1.png" alt=""></li>
+                <li><a href="https://www.facebook.com/shahadathossen513" target="_blank"><img src="assets/facebook.png" alt=""></a></li>
+                <li><a href="https://github.com/shahadat513" target="_blank"><img src="assets/github.png" alt=""></a></li>
+                <li><a href="https://github.com/shahadat513" target="_blank"><img src="assets/linkedin-icon 1.png" alt=""></a></li>
             </ul>
         </div>
         <!-- Footer end here -->
